example/errors/lexer/unknown_character_escape2.box
set x: str = "dr\fda\ğŸ¥³fağŸ¥³\afdsac";
